@@ -9,6 +9,13 @@ int_t int_times(int_t x, int_t y) { return x*y; }
 int_t int_divide(int_t x, int_t y) { return x/y; }
 int_t int_neg(int_t x) { return -x; }
 bool_t int_less(int_t x, int_t y) { return x<y; }
+bool_t int_lessequal(int_t x, int_t y) { return x<=y; }
+
+int_t int_cmp(int_t x, int_t y) {
+  if (x==y) return 0;
+  if (x<y) return -1;
+  return 1;
+}
 
 int_t int_cast(object_t x)
 {
